# agent-on-call

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.aoc/: .gitignore
.aoc/agent-notes/active/: 27-refine-2026-03-25.md  30-refine-2026-03-25.md  30-review-2026-03-25.md  30-test-2026-03-25.md  35-refine-2026-03-25T12-00.md  37-refine-2026-03-25T12-00.md  DI_lAHOANkURs4BS98CzgKULsY-implement-2026-03-28.md  DI_lAHOANkURs4BS98CzgKULsY-review-2026-03-28.md  DI_lAHOANkURs4BS98CzgKULsY-test-2026-03-28.md
.aoc/docs/: echo-cancellation-verification.md
.github/workflows/: ci.yml
docs/: BACKLOG.md
docs/superpowers/plans/: 2026-03-21-agent-on-call-mvp.md  2026-03-25-clean-workspace-plan.md  2026-03-25-mute-button-plan.md  (+12 more)
frontend/: .dockerignore  .env.local.example  .gitignore  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: connection-error.spec.ts  data-channel.spec.ts  room-layout.spec.ts  settings-panel.spec.ts  transcript-timestamps.spec.ts  tts-toggle.spec.ts
src/agent_on_call/: __init__.py  code_analysis.py  config.py  guidance_queue.py  main.py  messages.py  orchestrator.py  prompt_builder.py  session_logger.py  transcript.py  turn_taking.py  web_tools.py  workspace.py
tests/: conftest.py  test_code_analysis.py  test_config.py  test_data_channel.py  test_main.py  test_messages.py  test_orchestrator.py  test_prompt_builder.py  test_session_error_handler.py  test_session_logger.py  test_transcript.py  test_turn_taking.py  test_web_tools.py  test_workspace.py
workspace/: Dockerfile
(+48 files in other folders)
